--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <input type="number" name="pages" id="pages" required>
             <button type="button" id="button">Add Book</button>
         </form>
-        <div id="book-display">
-        </div>
+        <div id="book-display"></div>
         <div id="add-button">+</div>
     </main>
 </body>
