--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Library</title>
+    <title>Not - Library</title>
 </head>
 <body>
     <header>
-        <h1>Not-Library</h1>
+        <h1>Not - Library</h1>
     </header>
     <main>
         <form id="book-form" action="" method="get">
